--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <script src="https://raw.githubusercontent.com/aframevr/aframe/master/dist/aframe-master.js"></script>
     <script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
     <title>React App</title>
   </head>
